fix alignment of navigation titles, re #7326

--- a/public/assets/stylesheets/less/navigation.less
+++ b/public/assets/stylesheets/less/navigation.less
@@ -101,7 +101,7 @@ body:not(.fixed) #barTopMenu {
             position: absolute;
             white-space: nowrap;
 
-            text-indent: 50%;
+            left: 50%;
             .translate(-50%, 0);
 
             opacity: 0;
